first_correction_prof
chua check lai sau khi sua loi

--- a/Final_thesis/uw-ethesis.bib
+++ b/Final_thesis/uw-ethesis.bib
@@ -178,21 +178,21 @@
 }
 
 @Misc{cost_fatal,
-  author = {J. A. Stevens, P. S. Corso, E. A. Finkelstein, T. R. Miller},
+  author = {J. A. Stevens and P. S. Corso and E. A. Finkelstein and T. R. Miller},
   title  = {The costs of fatal and non-fatal falls among older adults},
   month  = oct,
   year   = {2006},
 }
 
 @InProceedings{cognitive_1,
-  author    = {Prudham D, Evans JG.},
+  author    = {D Prudham and John Grimley Evans},
   title     = {Factors associated with falls in the elderly: a community study.},
   booktitle = {Age Ageing},
   year      = {1981},
 }
 
 @Article{cognitive_2,
-  author  = {John C. Morris Eugene H. Rubin Edward J. Morris Stephen A. Mandel},
+  author  = {John C. Morris and Eugene H. Rubin and Edward J. Morris and Stephen A. Mandel},
   title   = {Senile Dementia of the Alzheimer's Type: An Important Risk Factor for Serious Falls},
   journal = {Journal of Gerontology},
   volume  = {42},
@@ -201,7 +201,7 @@
 }
 
 @Article{postural_1,
-  author  = {Asir John Samuel, John Solomon, Divya Mohan},
+  author  = {Asir John Samuel and John Solomon and Divya Mohan},
   title   = {A Critical Review on the Normal Postural Control},
   journal = {Physiotherapy and occupational Journal},
   year    = {2015},
@@ -211,7 +211,7 @@
 }
 
 @Article{postural_2,
-  author  = {Poonam K. Pardasaney, Mary D. Slavin, Robert C. Wagenaar, Nancy K. Latham, Pengsheng Ni, Alan M. Jette},
+  author  = {Poonam K. Pardasaney and Mary D. Slavin and Robert C. Wagenaar and Nancy K. Latham and Pengsheng Ni and Alan M. Jette},
   title   = {Conceptual limitations of balance measures for community-dwelling older adults},
   journal = {Physical Therapy},
   year    = {2013},
@@ -221,7 +221,7 @@
 }
 
 @Article{cardio_1,
-  author  = {Davies AJ, Kenny RA},
+  author  = {A. J. Davies and R. A. Kenny},
   title   = {Falls presenting to the Accident and Emergency Department: types of presentation and risk factor profile},
   journal = {Age Aging},
   year    = {1996},
@@ -230,7 +230,7 @@
 }
 
 @Article{ca,
-  author  = {Kapoor WN, Karpf M, Wieand S, Peterson JR, Levey GS Wishwa N. Kapoor, Michael Karpf, Sam Wieand, Jacqueline R. Peterson, Gerald S. Levey},
+  author  = {Kapoor WN and Karpf M and Wieand S and Peterson JR and Levey GS Wishwa N. Kapoor and Michael Karpf and Sam Wieand and Jacqueline R. Peterson and Gerald S. Levey},
   title   = {A prospective evaluation and follow-up of patients with syncope},
   journal = {New England Journal of Medical},
   year    = {1983},
@@ -244,7 +244,7 @@
 }
 
 @Article{cardio_2,
-  author  = {Juan J. Carrero, Dinanda J. de Jager, Marion Verduijn, Pietro Ravani, Johan De Meester, James G. Heaf, Patrik Finne, Andries J. Hoitsma, Julio Pascual, Faiçal Jarraya, Anna V. Reisaete, Frederic Collart, Friedo W. Dekker, Kitty J. Jager},
+  author  = {Juan J. Carrero and Dinanda J. de Jager and Marion Verduijn and Pietro Ravani and Johan De Meester and James G. Heaf and Patrik Finne and Andries J. Hoitsma and Julio Pascual and Faiçal Jarraya and Anna V. Reisaete and Frederic Collart and Friedo W. Dekker and Kitty J. Jager},
   title   = {Cardiovascular and Noncardiovascular Mortality among Men and Women Starting Dialysis},
   journal = {Clinical Journal of the American Society of Nephrology},
 }
@@ -256,17 +256,19 @@
 }
 
 @Article{head_injury_1,
-  author  = {MMWR Morb Mortal Wkly Rep},
+  author  = {{MMWR Morb Mortal Wkly Rep}},
   title   = {Nonfatal fall-related traumatic brain injury among older adults—California, 1996–1999},
   journal = {Morbidity and Mortality Weekly Report},
   year    = {2003},
 }
 
-@Misc{,
+@Misc{figure_guardian,
+  title = {How Medical Alert Systems Can Help Alzheimer’s \& Dementia Patients},
+  url   = {http://medicalalertsystemshq.com/guides/how-medical-alert-systems-can-help-alzheimers-dementia-patients.html},
 }
 
 @Article{only_accel_1,
-  author  = {Weihao Qu, Feng Lin, Aosen Wang, Wenyao Xu},
+  author  = {Weihao Qu and Feng Lin and Aosen Wang and Wenyao Xu},
   title   = {Evaluation of a Low-complexity Fall Detection Algorithm on Wearable Sensor towards Falls and Fall-alike Activities},
   journal = {Gait Posture},
   year    = {2008},
@@ -274,7 +276,7 @@
 }
 
 @Article{only_accel_2,
-  author    = {Bourke, Alan and O'Brien, J.V. and ÓLaighin, Gearóid},
+  author    = {Bourke Alan and O'Brien J.V. and ÓLaighin Gearóid},
   title     = {Evaluation of A threshold-based tri-axial accelerometer},
   year      = {2006},
   volume    = {26},
@@ -284,7 +286,7 @@
 }
 
 @Article{only_accel_3,
-  author  = {Dean M. Karantonis, Nigel H. Lovell},
+  author  = {Dean M. Karantonis and Nigel H. Lovell},
   title   = {Implementation of a Real-Time Human Movement Classifier Using a Triaxial Accelerometer for Ambulatory Monitoring},
   journal = {IEEE TRANSACTIONS ON INFORMATION TECHNOLOGY IN BIOMEDICINE},
   year    = {2006},
@@ -305,7 +307,7 @@
 }
 
 @InProceedings{body_orientation_2,
-  author    = {Jay Chen, Karric Kwong, Dennis Chang, Jerry Luk, Ruzena Bajcsy},
+  author    = {Jay Chen and Karric Kwong and Dennis Chang and Jerry Luk and Ruzena Bajcsy},
   title     = {Wearable Sensors for Reliable Fall Detection},
   booktitle = {Proceedings of the 2005 IEEE},
   year      = {2005},
@@ -315,7 +317,7 @@
 }
 
 @Article{window_1,
-  author  = {Alwathiqbellah Ibrahim, Mohammad I. Younis},
+  author  = {Alwathiqbellah Ibrahim and Mohammad I. Younis},
   title   = {Simple Fall Criteria for MEMS Sensors: Data Analysis and Sensor Concept},
   journal = {Sensor},
   year    = {2014},
@@ -325,7 +327,7 @@
 }
 
 @InProceedings{window_2,
-  author    = {Mihail Popescu, Benjapon Hotrabhavananda, Michael Moore, Marjorie Skubic},
+  author    = {Mihail Popescu and Benjapon Hotrabhavananda and Michael Moore and Marjorie Skubic},
   title     = {V AMPIR- An Automatic Fall Detection System U sing a Vertical PIR Sensor Array},
   booktitle = {Proceedings of the 6th International Conference on Pervasive Computing Technologies for Healthcare},
   year      = {2012},
@@ -335,7 +337,7 @@
 }
 
 @InProceedings{sensor_position_1,
-  author    = {Ling Bao, Stephen S. Intille},
+  author    = {Ling Bao and Stephen S. Intille},
   title     = {Activity Recognition from User-Annotated Acceleration Data},
   booktitle = {International Conference on Pervasive Computing},
   year      = {2004},
@@ -350,7 +352,7 @@
   title     = {Gait and Posture 28},
   publisher = {Elseview},
   year      = {2008},
-  author    = {Maarit Kangas,Antti Konttila,Per Lindgren,Ilkka Winblad,Timo Jämsä},
+  author    = {Maarit Kangas and Antti Konttila andPer Lindgren and Ilkka Winblad and Timo Jämsä},
 }
 
 @Unknown{sensor_position_3,
@@ -360,6 +362,38 @@
   year   = {2017},
   isbn   = {978-3-319-58876-6},
   pages  = {225-232},
+}
+
+@Article{cause_cardio,
+  author  = {Hilary Cronnin and Rose Anne Kenny},
+  title   = {Cardiac Cause of Falls and Their Treatment},
+  journal = {Clinics in Geriatric Medicine},
+  volume  = {26},
+  number  = {4},
+  pages   = {539-567},
+}
+
+@Misc{mpu_lib,
+  author = {Jeff Rowberg},
+  title  = {MPU6050 Library},
+  url    = {https://github.com/jrowberg/i2cdevlib/tree/master/Arduino/MPU6050},
+}
+
+@Article{optimum_sensor_place,
+  author  = {Quoc T Huynh and Uyen D Nguyen and Su V Tran and Binh Q Tran},
+  title   = {Optimum location for sensors in fall detection},
+  journal = {Proceedings of the International Conference on Green and Human Information Technology},
+  year    = {2013},
+}
+
+@Misc{myHalo,
+  url = {https://www.mobilehelp.com/medical-alert-systems/mobilehelp-solo/},
+}
+
+@Manual{block_diagram,
+  title        = {ESP8266EX Datasheet},
+  organization = {Espressif},
+  url          = {https://www.espressif.com/sites/default/files/documentation/0a-esp8266ex_datasheet_en.pdf},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
