complete 4/6 data table

--- a/Final_thesis/uw-ethesis.bib
+++ b/Final_thesis/uw-ethesis.bib
@@ -336,34 +336,6 @@
   month     = may,
 }
 
-@InProceedings{sensor_position_1,
-  author    = {Ling Bao and Stephen S. Intille},
-  title     = {Activity Recognition from User-Annotated Acceleration Data},
-  booktitle = {International Conference on Pervasive Computing},
-  year      = {2004},
-  volume    = {3001},
-  pages     = {1-17},
-  publisher = {Springer, Berlin, Heidelberg},
-}
-
-@InBook{sensor_position_2,
-  chapter   = {Comparison of low-complexity fall detection algorithms for body attached accelerometers},
-  pages     = {285-291},
-  title     = {Gait and Posture 28},
-  publisher = {Elseview},
-  year      = {2008},
-  author    = {Maarit Kangas and Antti Konttila andPer Lindgren and Ilkka Winblad and Timo Jämsä},
-}
-
-@Unknown{sensor_position_3,
-  author = {Ntanasis, Periklis and Pippa, Evangelia and Ozdemir, Ahmet Turan and Barshan, Billur and Megalooikonomou, Vasileios},
-  title  = {Investigation of Sensor Placement for Accurate Fall Detection},
-  month  = {06},
-  year   = {2017},
-  isbn   = {978-3-319-58876-6},
-  pages  = {225-232},
-}
-
 @Article{cause_cardio,
   author  = {Hilary Cronnin and Rose Anne Kenny},
   title   = {Cardiac Cause of Falls and Their Treatment},
@@ -394,6 +366,16 @@
   title        = {ESP8266EX Datasheet},
   organization = {Espressif},
   url          = {https://www.espressif.com/sites/default/files/documentation/0a-esp8266ex_datasheet_en.pdf},
+}
+
+@Article{,
+}
+
+@Conference{sensor_position1,
+  author    = {Hristijan Gjoreski and Mitja Luštrek and Matjaž Gams},
+  title     = {Accelerometer Placement for Posture Recognition and Fall Detection},
+  booktitle = {Seventh International Conference on Intelligent Environments},
+  year      = {2011},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
